--- a/essays.css
+++ b/essays.css
@@ -260,7 +260,7 @@ b {
     background-image: linear-gradient(
         hsl(0 17% 16% / 0),
         hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1)), url("Images");
+         hsl(0 17% 16% / 1)), url("Images/pexels-pew-nguyen-239548.jpg");
   
     
     height: 50%;
