--- a/devblog.css
+++ b/devblog.css
@@ -22,7 +22,7 @@ h1
     text-align: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-100%);
+    transform: translate(-50%,-150%);
     color: #1d1d1f;
 
 
@@ -238,21 +238,24 @@ b {
     font-family: 'Montserrat-Regular', Arial, sans-serif;;
     font-weight: normal;
     font-style: normal;
-    font-size: 15px;
+    font-size: 16px;
     color: #1d1d1f;
     transform: translate(50%,220%);
-    top: 50%;
+    top: 0%;
     left: 50%;
-    text-align: center;
-    align-content: center;
+    
+    text-align: justify;
+    align-items: center;
     text-indent: 0px;
     display: flex;
     width: 50%;
-    padding: 20px;
-  margin-bottom: 2px;
-    
+    padding: 30px;
+   
+  margin: 0 0 20px;
+    line-height: normal;
 }
-    
+   
+
   
 
   
