--- a/intent.css
+++ b/intent.css
@@ -17,13 +17,14 @@ h1
     font-family: 'Leky Calgria', Arial, sans-serif;;
     font-weight: normal;
     font-style: normal;
-    font-size: 100px;
+    font-size: 99px;
     position: absolute;
     text-align: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-100%);
+    transform: translate(-50%,-150%);
     color: #1d1d1f;
+    white-space: nowrap;
 
 
 }
@@ -86,10 +87,24 @@ h4
     text-align: center;
     top: 10%;
     left: 50%;
-    transform: translate(-50%,330%);
+    transform: translate(-50%,10%);
     color: #1d1d1f;
 }
  
+h5
+ {
+    font-family: 'Montserrat-Regular',Arial, sans-serif;
+    font-weight: normal;
+    color: #1d1d1f;
+    text-align: center;
+    position: relative;
+    top: 15%;
+    left: 0%;
+    transform: translateY(-60%);
+    font-size: 20px;
+   
+    
+ }
 
 
 
@@ -238,23 +253,58 @@ b {
     font-family: 'Montserrat-Regular', Arial, sans-serif;;
     font-weight: normal;
     font-style: normal;
-    font-size: 15px;
+    font-size: 20px;
     color: #1d1d1f;
-    transform: translate(50%,220%);
-    top: 50%;
+    transform: translate(50%,100%);
+    top: 0%;
     left: 50%;
-    text-align: center;
-    align-content: center;
+    
+    text-align: justify;
+    align-items: center;
     text-indent: 0px;
     display: flex;
     width: 50%;
-    padding: 20px;
-  margin-bottom: 2px;
+    padding: 30px;
     
+  margin: 0 0 20px;
+    line-height: normal;
 }
     
-  
+.textbox p
+{
 
-  
+    font-family: 'Montserrat-Regular', Arial, sans-serif;;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 20px;
+    color: #1d1d1f;
+    transform: translate(50%,0%);
+    top: 0%;
+    left: 50%;
+    
+    text-align: justify;
+    align-items: center;
+    text-indent: 0px;
+    display: flex;
+    width: 50%;
+    padding: 30px;
+    
+  margin: 0 0 20px;
+    line-height: normal;
+}
+
+section
+{
+    width: 95%;
+    min-height: 100%;
+
+}
+section
+{
+    width: 100%;
+    float: left;
+    height: 100vh;
+    position: relative;
+}
   
   
