--- a/devblog.css
+++ b/devblog.css
@@ -113,7 +113,8 @@ html
 
 body
 {
-    background-color: #f0ece8;
+    background: rgb(198,162,133);
+background: radial-gradient(circle, rgba(198,162,133,1) 0%, rgba(231,218,201,1) 100%);
     font-size: 100%;
     font-family: 'Montserrat-Regular';
     overflow-x: hidden;
@@ -144,7 +145,8 @@ img {
       
       top: 0;
       left: 0;
-      background-color: #f0ece8;
+      background: rgba (216, 193, 170, 1);
+      
       z-index: 999;
       position: fixed;
      
@@ -225,8 +227,11 @@ b {
   
   body {
 
-    background-color: #f0ece8;
-    font-size: 100%;
+    background: rgb(224,208,193);
+background: linear-gradient(0deg, rgba(224,208,193,1) 0%, rgba(240,236,232,1) 100%);
+background-repeat: no-repeat;
+    background-attachment: static;
+
     font-family: 'Montserrat-Regular';
     padding: 20px;
   
@@ -255,7 +260,66 @@ b {
     line-height: normal;
 }
    
+footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #cdaf96;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 40px;
+    color: #1d1d1f;
+}
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.socials a{
+    text-decoration: none;
+    
+    color: #f5f5ff;
+}
+.socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
 
+}
+.socials a:hover i{
+    color: #322219;
+}
+
+
+
+#foot{
+    min-height: fit-content;
+}
   
 
   
