--- a/style.css
+++ b/style.css
@@ -12,12 +12,13 @@
 
 
 
+
 h1
 {
     font-family: 'Leky Calgria', Arial, sans-serif;;
     font-weight: normal;
     font-style: normal;
-    font-size: 200px;
+    font-size: 150px;
     position: absolute;
     text-align: center;
     top: 50%;
@@ -50,13 +51,14 @@ h2
 {
     margin: 0;
     padding: 0; 
+    box-sizing: border-box;
 }
 
 a 
 {
     text-decoration: none;
     font-family: 'Montserrat-Regular',Arial, sans-serif;
-    font-weight: normal;
+    font-weight: bold;
     color: #1d1d1f;
     text-transform: capitalize;
 
@@ -86,8 +88,9 @@ h4
     text-align: center;
     top: 10%;
     left: 50%;
-    transform: translate(-50%,30%);
+    transform: translate(-50%,100%);
     color: #1d1d1f;
+    
 }
 
 h5
@@ -137,10 +140,14 @@ html
 
 body
 {
-    background-color: #f0ece8;
+    background: rgb(198,162,133);
+    background: linear-gradient(0deg, rgba(198,162,133,1) 0%, rgba(240,236,232,1) 100%);
+    background-repeat: no-repeat;
+        background-attachment: static;
     font-size: 100%;
     font-family: sans-serif;
     overflow-x: hidden;
+    padding-bottom:auto; 
 
 }
 
@@ -148,7 +155,7 @@ body
 
 
 img {
-    width: 20%;
+    width: 100%;
     height: auto;
   }
 
@@ -164,15 +171,16 @@ hr
 header
 { 
     width: 100%;
-    height: 65px;
-    
+    min-height: auto;
     top: 0;
-    left: 0;
-    background-color: #f0ece8;
+    overflow: hidden;
+    display: flex;
+    background-color: #eee9e4;
     z-index: 999;
     position: fixed;
-   
+    align-items: center;
     justify-content: space-between;
+    vertical-align: middle;
     
    
 }
@@ -188,6 +196,7 @@ header
     -MOZ-transition: all 300ms;
     -webkit-transition: all 300ms;
 
+
 }
 
  #logo:hover
@@ -200,53 +209,44 @@ header
     width: 100%;
  }
 
-header nav 
-{
-    float: right;
-    align-items: center;
-    align-content: space-evenly;
+ header nav 
+ {
+     float: right;
+     align-items: center;
+     align-content: space-evenly;
+     
+     padding: 20px 60px;
+ 
+ }
+ 
+ header nav ul li
+ {
+     float: left;
+     margin-right: 25px;
+     transform: translate(50%, 50%);
+ 
     
-    padding: 20px 60px;
-
-}
-
-header nav ul li
-{
-    float: left;
-    margin-right: 25px;
-    transform: translate(50%, 50%);
-
-   
-   
-}
-
-header nav ul li a
-{
-    font-size: 25px;
-    color: #1d1d1f;
-    text-decoration: none;
     
+ }
+ 
+ header nav ul li a
+ {
+     font-size: 20px;
+     color: #1d1d1f;
+     text-decoration: none;
+     
+ 
+     
+ }
+ 
+ b {
+     font-weight: bold;
+   }
+  
+  
 
-    
-}
 
-b {
-    font-weight: bold;
-  }
 
-section
-{
-    width: 95%;
-    min-height: 100%;
-
-}
-
-#menu li a
-{
-    color: #1d1d1f;
-    text-decoration: none;
-    font-size: 20px;
-}
 
 section
 {
@@ -256,45 +256,27 @@ section
     position: relative;
 }
 
-#home
-{
-    background-color: #f0ece8;
+
+
+#about{
+
+    text-align: justify;
+    font-size: 20px;
+    padding-left: 0;
 
 }
 
-
-#about
-{
-    background-color: #f0ece8;
-   
-
-
-}
 
 #intention
 {
- background-color: #f0ece8;
+    
  display: grid;
- min-height: 100vh;
+ height: 50vh;
 
  line-height: 1.6;
  
  font-family: 'Montserrat-Regular';
 }
-
-
-#blog
-{
-    background-color: #f0ece8;
-}
-
-
-#essays
-{
-    background-color: #f0ece8;
-}
-
-
 
 
 .container p
@@ -318,10 +300,10 @@ section
 {
     float: right;
     position: relative;
-    transform: translate(-50%,-40%);
+    transform: translate(-20%,-40%);
     opacity: 1;
-    height: 600px;
-    width: 500px;
+    height: 500px;
+    width: 540px;
 }
 
 
@@ -341,8 +323,9 @@ section
 
 .card
 {
+    transform: translateY(60%);
     color: #f5f5ff;
-    background-image: url(Images/pexels-picjumbocom-196645.jpg);
+    background-image: url(Images/pexels-picjumbocom-196646.jpg);
     background-size: cover;
     padding: 10rem 0 0;
     max-width: 40ch;
@@ -350,10 +333,12 @@ section
     overflow: hidden;
     margin: 0 auto 40px auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    
 }
 
 .card-content
 {
+    
     --padding: 1.5rem;
     padding: var(--padding);
     background: linear-gradient(
@@ -368,17 +353,11 @@ section
 {
     position: relative;
     width: max-content;
-    
+    font-size: 20px;
    
 
 }
-.card-frame
-{
-    text-indent: 0px;
-    display: flex;
-    text-align: left;
 
-}
 
 .card-heading::after
 {
@@ -390,6 +369,14 @@ section
      bottom: 0;
     width: calc(100% + var(--padding));
     background: var(--clr-accent-400);
+}
+
+.card-frame
+{
+    text-indent: 0px;
+    display: flex;
+    text-align: left;
+
 }
 
 .button
@@ -417,9 +404,76 @@ section
     width: 50%;
   }
   
- 
+  
   .row:after {
     content: "";
     display: table;
     clear: both;
   }
+
+ 
+  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+      width: 100%;
+      padding: 0;
+    }
+  }
+  
+  footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: #cdaf96;
+    height: auto;
+    width: 100vw;
+    font-family: "Open Sans";
+    padding-top: 40px;
+    color: #1d1d1f;
+}
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 3rem;
+}
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.socials a{
+    text-decoration: none;
+    
+    color: #f5f5ff;
+}
+.socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+
+}
+.socials a:hover i{
+    color: #322219;
+}
+
+
+
