--- a/blog.css
+++ b/blog.css
@@ -1,7 +1,5 @@
-@font-face 
-{
+@font-face {
     font-family: "Leky Calgria";
-    
     src: url("Fonts/Leky Calgria.woff") format("opentype");
 }
 
@@ -10,11 +8,8 @@
     src: url("Fonts/Montserrat-Regular.woff") format("opentype");
 }
 
-
-
-h1
-{
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+h1 {
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 100px;
@@ -22,75 +17,49 @@ h1
     text-align: center;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     color: whitesmoke;
-
-
 }
 
-
-h5
-{
+h5 {
     font-family: sans-serif;
     font-size: 20px;
     font-style: normal;
     color: #faf9f6;
-    
-    
-
 }
 
-
-*
-{
+* {
     margin: 0;
-    padding: 0; 
-    
+    padding: 0;
 }
 
-a 
-{
+a {
     text-decoration: none;
-    font-family: 'Montserrat-Regular',Arial, sans-serif;
+    font-family: 'Montserrat-Regular', Arial, sans-serif;
     font-weight: normal;
     color: #1d1d1f;
     text-transform: capitalize;
-
 }
 
-
-
-
-li 
-{
+li {
     list-style-type: none;
 }
 
-html
-{
+html {
     scroll-behavior: smooth;
     margin: 0;
-    padding: 0; 
+    padding: 0;
     height: 150%;
-    
 }
 
-
-
-
-
-
-
-hr
-{
+hr {
     width: 30px;
     height: 3px;
     border: 0;
     margin: 0 auto 40px auto;
 }
 
-header
-{ 
+header {
     width: 100%;
     min-height: auto;
     top: 0;
@@ -102,13 +71,9 @@ header
     align-items: center;
     justify-content: space-between;
     vertical-align: middle;
-    
-   
 }
 
-
-#logo
-{
+#logo {
     width: 70px;
     float: left;
     margin: 10px 0 0 50px;
@@ -116,100 +81,76 @@ header
     -webkit-transition: all 300ms;
     -MOZ-transition: all 300ms;
     -webkit-transition: all 300ms;
-
 }
 
- #logo:hover
- {
+#logo:hover {
     opacity: 0.5;
- }
+}
 
- #logo img
- {
+#logo img {
     width: 100%;
- }
+}
 
-header nav 
-{
+header nav {
     float: right;
     align-items: center;
     align-content: space-evenly;
-    
     padding: 20px 60px;
-
 }
 
-header nav ul li
-{
+header nav ul li {
     float: left;
     margin-right: 25px;
     transform: translate(50%, 50%);
-
-   
-   
 }
 
-header nav ul li a
-{
+header nav ul li a {
     font-size: 20px;
     color: #1d1d1f;
     text-decoration: none;
     align-items: center;
     align-content: space-evenly;
-    
-
-    
 }
 
 b {
     font-weight: bold;
-  }
- 
-  body
-  {
-      background: rgb(198,162,133);
-      background: linear-gradient(0deg, rgba(198,162,133,1) 0%, rgba(240,236,232,1) 100%);
-      background-repeat: no-repeat;
-          background-attachment: static;
-      font-size: 100%;
-      font-family: z;
-      overflow-x: hidden;
-      padding-bottom:auto; 
-  
-  }
+}
 
+body {
+    background: rgb(198, 162, 133);
+    background: linear-gradient(0deg, rgba(198, 162, 133, 1) 0%, rgba(240, 236, 232, 1) 100%);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-size: 100%;
+    font-family: z;
+    overflow-x: hidden;
+    padding-bottom: auto;
+}
 
-.hero-image 
-{
-    
+.hero-image {
     background-image: linear-gradient(
-        hsl(0 17% 16% / 0),
-        hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1)), url("Images/pexels-tranmautritam-326514.jpg");
-  
-    
-    height: 50%;
-  
-    
+            hsl(0 17% 16% / 0),
+            hsl(20 17% 16% / 0.3) 20%,
+            hsl(0 17% 16% / 1)
+        ),
+        url("Images/pexels-tranmautritam-326514.jpg");
+    height: 75%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-  }
-  
- 
-  .hero-text 
-  {
+}
+
+.hero-text {
     text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: whitesmoke;
-  }
-  
-.hero-paragraph
-{
+}
+
+.hero-paragraph {
     font-family: 'Montserrat-Regular', Arial, sans-serif;
     font-size: 40px;
     text-align: center;
@@ -224,70 +165,58 @@ b {
     transform: translateY(40%);
 }
 
-:root
-{
-    --clr-neutral-900:hsl(17, 19%, 10%);
-    --clr-neutral-100:hsl(0, 0%, 100%);
-    --clr-neutral-400:hsl(97, 6%, 59%);
-
+:root {
+    --clr-neutral-900: hsl(17, 19%, 10%);
+    --clr-neutral-100: hsl(0, 0%, 100%);
+    --clr-neutral-400: hsl(97, 6%, 59%);
 }
 
 *,
-*::before, *::after
-{
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-.card
-{
-    transform: translateY(30%);
+.card {
+    transform: translateY(-50%);
     color: #f5f5ff;
     background-image: url(Images/pexels-picjumbocom-196645.jpg);
     background-size: cover;
     padding: 10rem 0 0;
-    max-width: 40ch;
+    max-width: 35ch;
     border-radius: 0.5em;
     overflow: hidden;
     margin: 0 auto 40px auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.card-content
-{
+.card-content {
     --padding: 1.5rem;
     padding: var(--padding);
     background: linear-gradient(
         hsl(0 17% 16% / 0),
         hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1));
-        
-
+        hsl(0 17% 16% / 1)
+    );
 }
 
-.card-heading
-{
+.card-heading {
     position: relative;
     width: max-content;
     font-size: 30px;
-   
-
 }
 
-
-.card-heading::after
-{
+.card-heading::after {
     content: "";
     position: absolute;
     height: 1px;
-    left: calc(var(--padding)*-1);
-
-     bottom: 0;
+    left: calc(var(--padding) * -1);
+    bottom: 0;
     width: calc(100% + var(--padding));
     background: var(--clr-accent-400);
 }
 
-.button
-{
+.button {
     cursor: pointer;
     display: inline;
     text-decoration: none;
@@ -296,38 +225,27 @@ b {
     padding: 0.5em 1.25em;
 }
 
-.button:hover, .button:focus
-{
+.button:hover,
+.button:focus {
     background-color: var(--clr-neutral-100);
 }
 
 * {
     box-sizing: border-box;
-  }
+}
 
-
-  .column {
+.row .column {
     float: left;
-    width: 33.33%;
-  }
-  
-  
-  .row:after {
+    width: 20%;
+}
+
+.row:after {
     content: "";
     display: table;
     clear: both;
-  }
+}
 
- 
-  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn {
-      width: 100%;
-      padding: 0;
-    }
-  }
-
-  footer{
+footer {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -339,56 +257,107 @@ b {
     padding-top: 40px;
     color: #1d1d1f;
 }
-.footer-content{
+
+.footer-content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
 }
-.footer-content h3{
+
+.footer-content h3 {
     font-size: 1.8rem;
     font-weight: 400;
     text-transform: capitalize;
     line-height: 3rem;
 }
-.footer-content p{
+
+.footer-content p {
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
     font-size: 14px;
 }
-.socials{
+
+.socials {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem 0 3rem 0;
 }
-.socials li{
+
+.socials li {
     margin: 0 10px;
 }
-.socials a{
+
+.socials a {
     text-decoration: none;
-    
     color: #f5f5ff;
 }
-.socials a i{
-    font-size: 1.1rem;
-    transition: color .4s ease;
 
+.socials a i {
+    font-size: 1.1rem;
+    transition: color 0.4s ease;
 }
-.socials a:hover i{
+
+.socials a:hover i {
     color: #322219;
 }
 
-section
-{
+section {
     width: 100%;
     float: left;
     height: 100vh;
     position: relative;
 }
 
+body {
+    background: rgb(198, 162, 133);
+    background: linear-gradient(
+        0deg,
+        rgba(198, 162, 133, 1) 0%,
+        rgba(240, 236, 232, 1) 100%
+    );
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-size: 100%;
+    font-family: z;
+    overflow-x: hidden;
+    padding-bottom: auto;
+}
 
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+      width: 100%;
+      padding: 0;
+    }
+  }
 
+  @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    h1 {
+      font-size: 100px;
+    }
+  
+    h2 {
+      font-size: 40px;
+      transform: translate(-120%, 30%);
+    }
+  
+    h4 {
+      font-size: 30px;
+    }
+  
+    .container {
+      padding: 0 100px;
+    }
+  
+    header nav {
+      padding: 20px 40px;
+    }
+  
+    footer .footer-content {
+      padding: 40px;
+    }
+  }
