--- a/devblog.css
+++ b/devblog.css
@@ -10,27 +10,32 @@
     src: url("Fonts/Montserrat-Regular.woff") format("opentype");
 }
 
+@font-face {
+    font-family: "Nunito-Italic-VariableFont";
+    src: url("Fonts/Nunito-Italic-VariableFont_wght.woff") format("opentype");
+}
 
 
-h1
-{
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+
+h1 {
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
-    font-size: 100px;
+    font-size: 150px;
     position: absolute;
     text-align: center;
+    align-items: left;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-150%);
-    color: #1d1d1f;
-
-
+    transform: translate(-50%,-40%);
+    color: whitesmoke;
+    display: inline-block;
 }
+
 
 h2
 {
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 60px;
@@ -66,6 +71,22 @@ h3
     font-family: 'Montserrat-Regular',Arial, sans-serif;
     font-weight: normal;
     color: #1d1d1f;
+    
+    text-align: center;
+    position: relative;
+    top: 2%;
+    left: 0%;
+    transform: translateY(-30%);
+   
+    
+ }
+
+ h5
+ {
+    font-family: 'Leky Calgria',Arial, sans-serif;
+    font-weight: normal;
+    color: #1d1d1f;
+    font-size: 20PX;
     text-align: center;
     position: relative;
     top: 2%;
@@ -78,26 +99,22 @@ h3
 
 h4
 {
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
-    font-style: normal;
-    font-size: 60px;
+    font-style: italic;
+    font-size: 40px;
     position: relative;
     text-align: center;
     top: 10%;
     left: 50%;
-    transform: translate(-50%,330%);
+    transform: translate(-50%,0%);
     color: #1d1d1f;
 }
  
 
 
 
- p
-{
-    text-align: center;
-    text-indent: 0px;
-}
+ 
 
 li 
 {
@@ -113,13 +130,18 @@ html
 
 body
 {
-    background: rgb(198,162,133);
-background: radial-gradient(circle, rgba(198,162,133,1) 0%, rgba(231,218,201,1) 100%);
-    font-size: 100%;
+    background: #eee9e4;
+    
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
     font-family: 'Montserrat-Regular';
+    min-height: 1000px;
     overflow-x: hidden;
+    
 
 }
+
 
 
 
@@ -139,21 +161,21 @@ img {
   }
   
   header
-  { 
-      width: 100%;
-      height: 65px;
-      
-      top: 0;
-      left: 0;
-      background: rgba (216, 193, 170, 1);
-      
-      z-index: 999;
-      position: fixed;
-     
-      justify-content: space-between;
-      
-     
-  }
+{ 
+    width: 100%;
+    min-height: auto;
+    top: 0;
+    overflow: hidden;
+    display: flex;
+    background-color: #eee9e4;
+    z-index: 999;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+    vertical-align: middle;
+    
+   
+}
 
 
 
@@ -219,56 +241,93 @@ b {
 
 
 
-
-
 * {
     box-sizing: border-box;
   }
   
-  body {
-
-    background: rgb(224,208,193);
-background: linear-gradient(0deg, rgba(224,208,193,1) 0%, rgba(240,236,232,1) 100%);
-background-repeat: no-repeat;
-    background-attachment: static;
-
-    font-family: 'Montserrat-Regular';
-    padding: 20px;
-  
-  }
-  
-  .container p
+  .hero-image 
 {
+    
+    background-image: linear-gradient(
+        hsl(0 17% 16% / 0),
+        hsl(20 17% 16% / 0.3) 20%,
+         hsl(0 17% 16% / 1)), url("Images/pexels-tranmautritam-326514.jpg");
+  
+    
+    height: 100%;
+  
+    
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+    
+   
+    .hero-text 
+    {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: whitesmoke;
+    }
+    
+  
+  
+  p
+{
+    text-align: center;
+    text-indent: 22px;
+    
+    
+} 
+  
 
-    font-family: 'Montserrat-Regular', Arial, sans-serif;;
+
+.container {
+    margin-top: 20px;
+    padding: 0 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+}
+
+.container p {
+    font-family: 'Montserrat-Regular', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 16px;
     color: #1d1d1f;
-    transform: translate(50%,220%);
-    top: 0%;
-    left: 50%;
-    
-    text-align: justify;
-    align-items: center;
-    text-indent: 0px;
-    display: flex;
-    width: 50%;
-    padding: 30px;
-   
-  margin: 0 0 20px;
-    line-height: normal;
+    margin-bottom: 20px;
 }
+
+.container p:first-child {
+    margin-top: 0;
+}
+
+.container::before,
+.container::after {
+    content: "";
+    flex-grow: 300;
+}
+
+
+  
+
    
 footer{
     position: absolute;
+    margin-bottom: auto;
     bottom: 0;
     left: 0;
     right: 0;
     background: #cdaf96;
     height: auto;
     width: 100vw;
-    font-family: "Open Sans";
+    font-family: 'Montserrat-Regular',Arial, sans-serif;
     padding-top: 40px;
     color: #1d1d1f;
 }
@@ -315,12 +374,84 @@ footer{
     color: #322219;
 }
 
-
-
-#foot{
-    min-height: fit-content;
+#words{
+     min-height: 100vh;
 }
+
+
+section
+{
+    width: 100%;
+    float: left;
+    height: 100vh;
+    position: relative;
+}
+
+@media only screen and (max-width: 600px) {
+    h1 {
+      font-size: 60px;
+    }
   
+    h2 {
+      font-size: 30px;
+      transform: translate(-50%, 0);
+    }
+  
+    h4 {
+      font-size: 30px;
+    }
+  
+    .container {
+      padding: 0 20px;
+    }
+  
+    img {
+      width: 100%;
+    }
+  
+    header nav {
+      padding: 20px;
+    }
+  
+    header nav ul li {
+      margin-right: 10px;
+    }
+  
+    footer .footer-content {
+      padding: 20px;
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    h1 {
+      font-size: 100px;
+    }
+  
+    h2 {
+      font-size: 40px;
+      transform: translate(-120%, 30%);
+    }
+  
+    h4 {
+      font-size: 30px;
+    }
+  
+    .container {
+      padding: 0 100px;
+    }
+  
+    header nav {
+      padding: 20px 40px;
+    }
+  
+    footer .footer-content {
+      padding: 40px;
+    }
+  }
+
+  
+
+
 
   
   
