--- a/essays.css
+++ b/essays.css
@@ -10,27 +10,32 @@
     src: url("Fonts/Montserrat-Regular.woff") format("opentype");
 }
 
+@font-face {
+    font-family: "Nunito-Italic-VariableFont";
+    src: url("Fonts/Nunito-Italic-VariableFont_wght.woff") format("opentype");
+}
 
 
-h1
-{
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+
+h1 {
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
-    font-size: 100px;
+    font-size: 150px;
     position: absolute;
     text-align: center;
+    align-items: left;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-100%);
+    transform: translate(-50%,-40%);
     color: whitesmoke;
-
-
+    display: inline-block;
 }
+
 
 h2
 {
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     font-size: 60px;
@@ -66,6 +71,22 @@ h3
     font-family: 'Montserrat-Regular',Arial, sans-serif;
     font-weight: normal;
     color: #1d1d1f;
+    
+    text-align: center;
+    position: relative;
+    top: 2%;
+    left: 0%;
+    transform: translateY(-30%);
+   
+    
+ }
+
+ h5
+ {
+    font-family: 'Leky Calgria',Arial, sans-serif;
+    font-weight: normal;
+    color: #1d1d1f;
+    font-size: 20PX;
     text-align: center;
     position: relative;
     top: 2%;
@@ -78,26 +99,22 @@ h3
 
 h4
 {
-    font-family: 'Leky Calgria', Arial, sans-serif;;
+    font-family: 'Leky Calgria', Arial, sans-serif;
     font-weight: normal;
-    font-style: normal;
-    font-size: 60px;
+    font-style: italic;
+    font-size: 40px;
     position: relative;
     text-align: center;
     top: 10%;
     left: 50%;
-    transform: translate(-50%,330%);
+    transform: translate(-50%,0%);
     color: #1d1d1f;
 }
  
 
 
 
- p
-{
-    text-align: center;
-    text-indent: 0px;
-}
+ 
 
 li 
 {
@@ -109,21 +126,22 @@ html
     scroll-behavior: smooth;
     margin: 0;
     padding: 0; 
-    height: 150%;
 }
 
 body
 {
-    background: rgb(224,208,193);
-background: linear-gradient(0deg, rgba(224,208,193,1) 0%, rgba(240,236,232,1) 100%);
-background-repeat: no-repeat;
-    background-attachment: static;
-    font-size: 100%;
+    background: #eee9e4;
+    
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    
     font-family: 'Montserrat-Regular';
+    min-height: 1000px;
     overflow-x: hidden;
-    height: 100%;
+    
 
 }
+
 
 
 
@@ -143,20 +161,21 @@ img {
   }
   
   header
-  { 
-      width: 100%;
-      height: 65px;
-      
-      top: 0;
-      left: 0;
-      background-color: #f0ece8;
-      z-index: 999;
-      position: fixed;
-     
-      justify-content: space-between;
-      
-     
-  }
+{ 
+    width: 100%;
+    min-height: auto;
+    top: 0;
+    overflow: hidden;
+    display: flex;
+    background-color: #eee9e4;
+    z-index: 999;
+    position: fixed;
+    align-items: center;
+    justify-content: space-between;
+    vertical-align: middle;
+    
+   
+}
 
 
 
@@ -222,190 +241,93 @@ b {
 
 
 
-
-
 * {
     box-sizing: border-box;
   }
   
-   
-
-  
-  .container p
-{
-
-    font-family: 'Montserrat-Regular', Arial, sans-serif;;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 15px;
-    color: #1d1d1f;
-    transform: translate(50%,220%);
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    align-content: center;
-    text-indent: 0px;
-    display: flex;
-    width: 50%;
-    padding: 20px;
-  margin-bottom: 2px;
-    
-}
-    
-.hero-image 
+  .hero-image 
 {
     
     background-image: linear-gradient(
         hsl(0 17% 16% / 0),
         hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1)), url("Images/pexels-pew-nguyen-239548.jpg");
+         hsl(0 17% 16% / 1)), url("Images/pexels-tranmautritam-326514.jpg");
   
     
-    height: 50%;
-    width: auto;
+    height: 100%;
   
     
     background-position: center;
     background-repeat: no-repeat;
-    background-size: auto;
-    position: relative;
-  }
-  
- 
-  .hero-text 
-  {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: whitesmoke;
-  }
-  
-.hero-paragraph
-{
-    font-family: 'Montserrat-Regular', Arial, sans-serif;
-    font-size: 40px;
-    text-align: center;
-    text-indent: 0px;
-    max-width: 700px;
-    margin: auto;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    top: 10%;
-    left: 0%;
-    transform: translateY(0%);
-}
-
-:root
-{
-    --clr-neutral-900:hsl(17, 19%, 10%);
-    --clr-neutral-100:hsl(0, 0%, 100%);
-    --clr-neutral-400:hsl(97, 6%, 59%);
-
-}
-
-*,
-*::before, *::after
-{
-    box-sizing: border-box;
-}
-
-.card
-{
-    transform: translateY(30%);
-    color: #f5f5ff;
-    background-image: url(Images/pexels-picjumbocom-196646.jpg);
     background-size: cover;
-    padding: 10rem 0 0;
-    max-width: 40ch;
-    border-radius: 0.5em;
-    overflow: hidden;
-    margin: 0 auto 40px auto;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.card-content
-{
-    --padding: 1.5rem;
-    padding: var(--padding);
-    background: linear-gradient(
-        hsl(0 17% 16% / 0),
-        hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1));
-        
-
-}
-
-.card-heading
-{
     position: relative;
-    width: max-content;
+  }
+    
    
-
-}
-.card-frame
-{
-    text-indent: 0px;
-    display: flex;
-    text-align: left;
-
-}
-
-.card-heading::after
-{
-    content: "";
-    position: absolute;
-    height: 1px;
-    left: calc(var(--padding)*-1);
-
-     bottom: 0;
-    width: calc(100% + var(--padding));
-    background: var(--clr-accent-400);
-}
-
-.button
-{
-    cursor: pointer;
-    display: inline;
-    text-decoration: none;
-    color: var(--clr-neutral-900);
-    background-color: var(--clr-neutral-400);
-    padding: 0.5em 1.25em;
-}
-
-.button:hover, .button:focus
-{
-    background-color: var(--clr-neutral-100);
-}
-
-* {
-    box-sizing: border-box;
-  }
-
-  .column {
-    float: left;
-    width: 50%;
-  }
+    .hero-text 
+    {
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: whitesmoke;
+    }
+    
   
- 
-  .row:after {
+  
+  p
+{
+    text-align: center;
+    text-indent: 22px;
+    
+    
+} 
+  
+
+
+.container {
+    margin-top: 20px;
+    padding: 0 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+}
+
+.container p {
+    font-family: 'Montserrat-Regular', Arial, sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 18px;
+    color: #1d1d1f;
+    margin-bottom: 20px;
+}
+
+.container p:first-child {
+    margin-top: 0;
+}
+
+.container::before,
+.container::after {
     content: "";
-    display: table;
-    clear: both;
-  }
+    flex-grow: 300;
+}
 
 
-  footer{
+  
+
+   
+footer{
     position: absolute;
+    margin-bottom: auto;
     bottom: 0;
     left: 0;
     right: 0;
     background: #cdaf96;
     height: auto;
     width: 100vw;
-    font-family: "Open Sans";
+    font-family: 'Montserrat-Regular',Arial, sans-serif;
     padding-top: 40px;
     color: #1d1d1f;
 }
@@ -451,6 +373,56 @@ b {
 .socials a:hover i{
     color: #322219;
 }
- 
+
+#words{
+     min-height: 100vh;
+}
+
+
+section
+{
+    width: 100%;
+    float: left;
+    height: 100vh;
+    position: relative;
+}
+
+
+@media screen and (max-width: 800px) {
+    .leftcolumn, .rightcolumn {
+      width: 100%;
+      padding: 0;
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 1024px) {
+    h1 {
+      font-size: 100px;
+    }
+  
+    h2 {
+      font-size: 40px;
+      transform: translate(-120%, 30%);
+    }
+  
+    h4 {
+      font-size: 30px;
+    }
+  
+    .container {
+      padding: 0 100px;
+    }
+  
+    header nav {
+      padding: 20px 40px;
+    }
+  
+    footer .footer-content {
+      padding: 40px;
+    }
+  }
+
+
+  
   
   
