--- a/gallery.css
+++ b/gallery.css
@@ -20,3 +20,36 @@
     transform: scale(1.1);
  }
 
+ @media screen and (max-width: 800px) {
+   .leftcolumn, .rightcolumn {
+     width: 100%;
+     padding: 0;
+   }
+ }
+
+ @media only screen and (min-width: 601px) and (max-width: 1024px) {
+   h1 {
+     font-size: 100px;
+   }
+ 
+   h2 {
+     font-size: 40px;
+     transform: translate(-120%, 30%);
+   }
+ 
+   h4 {
+     font-size: 30px;
+   }
+ 
+   .container {
+     padding: 0 100px;
+   }
+ 
+   header nav {
+     padding: 20px 40px;
+   }
+ 
+   footer .footer-content {
+     padding: 40px;
+   }
+ }
