--- a/Essays/essays.css
+++ b/Essays/essays.css
@@ -84,9 +84,10 @@ h3
  h5
 {
     font-family: sans-serif;
-    font-size: 20px;
+    font-size: 40px;
     font-style: normal;
-    color: #faf9f6;
+    color: #1d1d1f;
+    text-align: justify;
     
     
 
@@ -255,7 +256,7 @@ b {
     background-image: linear-gradient(
         hsl(0 17% 16% / 0),
         hsl(20 17% 16% / 0.3) 20%,
-         hsl(0 17% 16% / 1)), url("Images/pexels-pew-nguyen-239548.jpg");
+         hsl(0 17% 16% / 1)), url("/Images/pexels-pew-nguyen-239548.jpg");
   
     
     height: 100%;
@@ -283,8 +284,8 @@ b {
   
   p
 {
-    text-align: center;
-    text-indent: 22px;
+    text-align: justify;
+    text-indent: 0px;
     
     
 } 
@@ -306,6 +307,7 @@ b {
     font-style: normal;
     font-size: 18px;
     color: #1d1d1f;
+    
     margin-bottom: 20px;
 }
 
